--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,3 +3,10 @@
     flex-direction: column;
     width: 300px;
 }
+
+
+.date-field {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
