--- a/app/page.module.css
+++ b/app/page.module.css
@@ -15,3 +15,9 @@
     flex-direction: column;
     width: 300px;
 }
+
+.current-jobs {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
