--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,37 +1,7 @@
-.login-field {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-}
-
-.date-field {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-}
-
-.time-field {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-}
-
-.current-jobs {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-}
-
-.loading {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0, 0.5);
-    color: #FFFFFF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
+.thin-border {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+    background-color: #fff;
 }
